--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^4.8.0",
     "@types/busboy": "^1.5.0",
     "busboy": "^1.6.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "object-sizeof": "^1.6.3"
   }
 }
