--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.10",
+    "@types/node-cron": "^3.0.7",
     "prisma": "^4.9.0",
     "typescript": "^4.9.3"
   },
@@ -20,6 +21,7 @@
     "@types/busboy": "^1.5.0",
     "busboy": "^1.6.0",
     "express": "^4.18.2",
+    "node-cron": "^3.0.2",
     "object-sizeof": "^1.6.3"
   }
 }
