--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npx nodemon",
+    "start": "npm run build && node build/index.js",
+    "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +16,10 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.10",
     "@types/node-cron": "^3.0.7",
+    "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
+    "rimraf": "^4.1.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
