--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
+    "tw-elements": "^1.0.0-alpha13",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
