--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@types/busboy": "^1.5.0",
     "busboy": "^1.6.0",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "node-cron": "^3.0.2",
     "object-sizeof": "^1.6.3"
   }
